--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
   application:
     name: browser-ncm
-#  profiles:
-#    active: @profileActive@
   thymeleaf:
     cache: false
   datasource:
@@ -24,6 +22,10 @@ logging:
 
 # 每个整5分执行定时任务
 schedule:
-#  cronTab: 0 0/5 * * * ?
-  cronTab: 0/30 * * * * ?
-  rate: 30000
+  cronTab: 0 0/5 * * * ?
+  rate: 300000
+#  cronTab: 0/30 * * * * ?
+#  rate: 30000
+  recordUrl: http://music.163.com/#/user/songs/rank?id=132674522
+#  user: 75317327
+  user: 132674522
